# blog_writting_agent

./: .gitignore  README.md  blog_writing_agent_backend.py  blog_writing_agent_frontend.py  main.py  mastering_self-attention_core_mechanics_applications_in_transformers.md  mastering_self-attention_implementation_pitfalls_and_optimization.md  pyproject.toml  requirements.txt
